Edit Scss files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Virtual Keyboard</h1>
+    <div ><input type="text" onkeypress="PressKey()" name="" id="inputs" class="TextArea"></div>
     <div class="Container">
       <div class="Row1 Rows ">
         <button class="Buttons BY" id="B~" >~</button>
