Write func for Caps Lock key

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </div>
       <div class="Row2 Rows">
-        <button class="Buttons BR" key-data="Cap">Cap</button>
+        <button class="Buttons BR" key-data="CapsLock">Cap</button>
         <div class="line2"></div>
         <button class=" Buttons BR" key-data="\n" >Ent</button>
       </div>
@@ -28,7 +28,7 @@
         <button class=" Buttons BG"  key-data="shift" >Shift</button>
       </div>
       <div class="Row4 Rows">
-        <button class=" Buttons BB"  key-data="\t" ></button>
+        <button class=" Buttons BB"  key-data=" space" > ' '</button>
       </div>
     </div>
   </div>
