Fix keyboard problem in js & html file

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="Row2 Rows">
         <button class="Buttons BR" key-data="CapsLock">Cap</button>
         <div class="line2"></div>
-        <button class=" Buttons BR" key-data="\n" >Ent</button>
+        <button class=" Buttons BR" key-data="Enter" >Ent</button>
       </div>
       <div class="Row3 Rows">
-        <button class="Buttons BG"  key-data="shift" >Shift</button>
+        <button class="Buttons BG"  key-data="ShiftLeft" id="ShiftLeft">Shift</button>
         <div class="line3"></div>
-        <button class=" Buttons BG"  key-data="shift" >Shift</button>
+        <button class=" Buttons BG"  key-data="ShiftRight" id = "ShiftRight">Shift</button>
       </div>
       <div class="Row4 Rows">
-        <button class=" Buttons BB"  key-data=" space" > ' '</button>
+        <button class=" Buttons BB"  key-data=" " ></button>
       </div>
     </div>
   </div>
