Func for Shift But have problem :)

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <button class=" Buttons BR" key-data="Enter" >Ent</button>
       </div>
       <div class="Row3 Rows">
-        <button class="Buttons BG"  key-data="ShiftLeft" id="ShiftLeft">Shift</button>
+        <button class="Buttons BG"  key-data="ShiftLeft" id="Shift">Shift</button>
         <div class="line3"></div>
-        <button class=" Buttons BG"  key-data="ShiftRight" id = "ShiftRight">Shift</button>
+        <button class=" Buttons BG"  key-data="ShiftRight" >Shift</button>
       </div>
       <div class="Row4 Rows">
         <button class=" Buttons BB"  key-data=" " ></button>
