Fix Shift key problem and add light for Caps key and End

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </div>
       <div class="Row2 Rows">
-        <button class="Buttons BR" key-data="CapsLock">Cap</button>
+        <button class="Buttons BR" key-data="CapsLock" id="Caps">Cap <div id="CpasLight"></div></button>
         <div class="line2"></div>
         <button class=" Buttons BR" key-data="Enter" >Ent</button>
       </div>
